welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value a
	if (vacation==false&&(day>=1 && a<=5)) {
                                        ^alarmClock:8: error: not found: value a
	else if (vacation==true&&(day>=1 && a<=5)) {
                                            ^alarmClock:8: error: type mismatch;
 found   : Unit
 required: String
	else if (vacation==true&&(day>=1 && a<=5)) {
             ^